Add svelte to have a second front end option

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,13 @@ psd
 thumb
 sketch
 
+### Svelte ###
+# gitignore template for the SvelteKit, frontend web component framework
+# website: https://kit.svelte.dev/
+
+.svelte-kit/
+package
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
