--- a/frontend-svelte/production-line/package.json
+++ b/frontend-svelte/production-line/package.json
@@ -36,5 +36,8 @@
 		"vite": "^5.3.1",
 		"vitest": "^1.6.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bulma": "^1.0.1"
+	}
 }
